src/style/index.css
/* ... */
.modal-content .message-ct {
  margin: 16px;
}

.modal-content__wrapper {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 10px 8px;
  min-height: 80px;
}

.receive-content-nest-qrimage {
  width: 140px;
  height: 140px;
  float: right;
  background-position: 50% 50%;
  background-size: contain;
  background-repeat: no-repeat;
}

.disabled, div.disabled {
  background: rgba(0, 0, 0, .08);
  color: #bbb;
  cursor: not-allowed;
  user-select: none;
}

.appWrapper {
  background: #f3f5f6;
  min-height: 100%;
}

.available-credits {
  margin: 16px;
  margin-left: 0px;
  width: 100%;
  display: flex;
  justify-content: space-between;
}

.searching-credits {
  display: flex;
  align-items: center;
  justify-content: space-around;
  margin-right: 20px;
  padding: 4px;
}

.searching-credits__text {
  display: flex;
  flex-direction: column;
  line-height: 18px;
}

.credits-purchase-menu {
  display: flex;
  width: 100%;
  justify-content: flex-end
}

.credits-purchase-menu__button {
  margin: 0px 0px 10px 10px;
}

.credit-purchase-table {
  border: 1px solid #999;
  margin-bottom: 16px;
}

.credit-purchase-row {
  padding: 8px;
  border-bottom: 1px solid #ccc;
  display: flex;
  flex-direction: row;
  align-items: center;
}

.credit-purchase-header .credit-purchase-row {
  border-bottom-color: #999;
}

.credit-purchase-cell {
  float: left;
  padding: 4px;
  margin: 0 8px;
}

.credit-purchase-header .credit-purchase-cell {
  font-weight: bold;
  width: 100%;
}

.credit-purchase-body .credit-purchase-cell {
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
}

.credit-purchase-date {
  width: 180px;
  text-align: center;
}

.credit-purchase-date-text {
  text-align: center;
}

.credit-purchase-number {
	width: 40% !important;
  text-align: center;
}

.credit-purchase-type {
  text-align: center;
}
.credit-purchase-price {
  text-align: center;
}
.credit-purchase-tx {
  text-align: center;
}
.credit-purchase-status {
  width: 100px;
  text-align: center;
}
.credit-purchase-status-font {
  font-weight: 500;
}
.user-page {
  margin: 0 auto;
  width: 800px;
}
.user-page .detail-header {
  margin-bottom: 16px;
}
.user-page .detail-username {
  font-size: 20px;
  margin-bottom: 4px;
}
.user-page .detail-email {
  margin-bottom: 16px;
  color: #555;
}
.user-page .detail-admin {
  display: inline-block;
  margin-left: 8px;
  color: #39740a;
}
.user-page .detail-form .field {
  line-height: 24px;
}
.user-page .detail-form .field .clear {
  clear: left;
}
.user-page .detail-form .field .field-label {
  float: left;
  width: 160px;
  font-size: 1.05em;
  margin-right: 4px;
  color: #777;
  text-align: left;
}

.user-page .detail-form .field .field-value {
  float: left;
  width: 600px;
  line-height: 24px;
}
.user-page .detail-form .field-separator {
  height: 16px;
}
.user-page .detail-form .field-value .mark-link {
  margin-left: 8px;
}
.user-page .detail-tab-body {
  padding: 0 8px;
}
.user-page .detail-proposals > .content {
  margin: 0;
}

button.button-small {
  height: 22px;
  line-height: 22px;
  margin: 0 0 0 16px;
  padding: 0 12px;
}
button.button-small:active {
  margin-top: 0;
}
button.button-small .loading .logo {
  margin-top: 3px;
}

button.inverse {
  color: #0079d3;
  background: none;
}

.tabs {
  min-height: 36px;
  margin-bottom: 24px;
}
.tabs .clear {
  clear: left;
}
.tab {
  display: block;
  float: left;
  color: #000;
  padding: 0 12px;
  height: 36px;
  line-height: 36px;
  margin-right: 3px;
  bottom: -1px;
  position: relative;
  cursor: pointer;
}
.tab:hover {
  text-decoration: none;
}
.tab-selected {
  border-bottom: 2px solid #2971FF;
  color: #2971FF;
  cursor: default;
}
.tab-border {
  height: 1px;
  background: #999;
}

.tab-count {
  display: inline-block;
  margin-left: 8px;
  color: #555;
  background-color: #ddd;
  height: 18px;
  line-height: 18px;
  min-width: 18px;
  padding: 0 4px;
  border-radius: 18px;
  text-align: center;
}

.tab-selected .tab-count {
  color: #2971FF;
}

.comments-sort {
  display: flex;
  align-items: center;
  padding-left: 16px;
}
.sort-select__control {
  width: 80px;
  background-color: #FFF !important;
  margin-left: 5px;
  min-height: 20px !important;
}

.sort-select__dropdown-indicator {
  padding: 2px !important;
}


.version-select__control {
  width: 100px;
  background-color: #FFF !important;
  margin-right: 5px;
  min-height: 18px !important;
  font-size: 12px;
}

.version-select__control--is-focused {
  font-size: 12px;
}

.version-select__single-value {
  font-size: 12px;
}

.version-select__dropdown-indicator {
  padding: 2px !important;
}

.version-select__menu {
  width: 100px !important;
  font-size: 12px;
}

.version-select__option {
  padding: 4px !important;
}

form div.usertext-body.may-blank-within.md-container {
  width: 100%;
}

/* helper classes */
.right-margin-5 {
  margin-right: 5px !important;
}

.right-margin-10 {
  margin-right: 10px !important;
}

.left-margin-5 {
  margin-left: 5px !important;
}

.warning-color {
  color: #d05a15 !important;
}

.font-12 {
  font-size: 12px !important;
}

.float-right {
  float: right;
}

/* Max height is (line-height * 25)  */
.entry > .usertext {
  max-height: 35.71428575em;
  overflow: hidden;
}

/* Max height is (line-height * 25)  */
.collapsed {
	max-height: 35.71428575em;
	overflow: hidden;
	margin-bottom: 7.5px;
}

.expanded {
	max-height: none;
}

.readMore {
	clear: both;
	cursor: pointer;
}

.linkish {
  color: #2971FF;
  cursor: pointer;
}

.new-file-indicator {
  color: red;
  position: relative;
  top: -12px;
  font-size: 0px;
  right: 0px;
  border-style: solid;
  border-radius: 50%;
  max-width: 3px;
  max-height: 3px;
}

.linkish-modal {
	color: #2971FF;
	font-size: .8em;
  cursor: pointer;
  margin: 5px 5px 0 0;
  float: right;
}

.proposal-paywall-section {
  padding: 15px;
}
/* ... */

